This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: RISC-V needs CTYPES_PASS_BY_REF_HACK
Type: behavior Stage: resolved
Components: ctypes Versions: Python 3.8, Python 3.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: iritkatriel, miss-islington, schwab
Priority: normal Keywords: patch, patch, patch

Created on 2019-01-29 08:35 by schwab, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 11694 merged schwab, 2019-01-29 10:40
PR 11694 merged schwab, 2019-01-29 10:40
PR 11694 merged schwab, 2019-01-29 10:41
PR 11696 merged miss-islington, 2019-01-29 16:16
Messages (4)
msg334505 - (view) Author: Andreas Schwab (schwab) * Date: 2019-01-29 08:35
======================================================================
FAIL: test_pass_by_value (ctypes.test.test_structures.StructureTestCase)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/abuild/rpmbuild/BUILD/Python-3.7.2/Lib/ctypes/test/test_structures.py", line 416, in test_pass_by_value
    self.assertEqual(s.first, 0xdeadbeef)
AssertionError: 195948557 != 3735928559

----------------------------------------------------------------------
msg334528 - (view) Author: miss-islington (miss-islington) Date: 2019-01-29 16:16
New changeset 742d768656512a469ce9571b1cbd777def7bc5ea by Miss Islington (bot) (Andreas Schwab) in branch 'master':
bpo-35847: RISC-V needs CTYPES_PASS_BY_REF_HACK (GH-11694)
https://github.com/python/cpython/commit/742d768656512a469ce9571b1cbd777def7bc5ea
msg334535 - (view) Author: miss-islington (miss-islington) Date: 2019-01-29 21:11
New changeset 10354cbb5067b4719ba1c2d51d22314a644ed3e5 by Miss Islington (bot) in branch '3.7':
bpo-35847: RISC-V needs CTYPES_PASS_BY_REF_HACK (GH-11694)
https://github.com/python/cpython/commit/10354cbb5067b4719ba1c2d51d22314a644ed3e5
msg378765 - (view) Author: Irit Katriel (iritkatriel) * (Python committer) Date: 2020-10-16 22:05
Can this be closed?
History
Date User Action Args
2022-04-11 14:59:10adminsetgithub: 80028
2020-11-20 15:11:36iritkatrielsetkeywords: patch, patch, patch
status: open -> closed
resolution: fixed
stage: patch review -> resolved
2020-10-16 22:05:14iritkatrielsetnosy: + iritkatriel
messages: + msg378765
2019-01-29 21:11:40miss-islingtonsetmessages: + msg334535
2019-01-29 16:16:38miss-islingtonsetpull_requests: + pull_request11543
2019-01-29 16:16:15miss-islingtonsetnosy: + miss-islington
messages: + msg334528
2019-01-29 10:41:05schwabsetkeywords: + patch
stage: patch review
pull_requests: + pull_request11538
2019-01-29 10:41:01schwabsetkeywords: + patch
stage: (no value)
pull_requests: + pull_request11537
2019-01-29 10:40:57schwabsetkeywords: + patch
stage: (no value)
pull_requests: + pull_request11536
2019-01-29 08:35:39schwabcreate