bpo-35847: RISC-V needs CTYPES_PASS_BY_REF_HACK (GH-11694)

This fixes the ctypes.test.test_structures.StructureTestCase test.

https://bugs.python.org/issue35847
(cherry picked from commit 742d768656512a469ce9571b1cbd777def7bc5ea)

Co-authored-by: Andreas Schwab <schwab@linux-m68k.org>